--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,2 +1,28 @@
-<h1>Game#show</h1>
-<p>Find me in app/views/game/show.html.erb</p>
+<div class="row">
+  <div class="col-md-3">
+    <div class="center">
+      <!-- game image -->
+    </div>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        Information
+      </div>
+      <div class="panel-body">
+        <strong> Title: </strong>
+          <%= @game.title %> <br>
+        <strong> Platforms: </strong>
+          <%= @game.platforms %> <br>
+        <strong> Release Year: </strong>
+          <%= @game.release_year %> <br>
+        <strong> Genre: </strong>
+          <%= @game.genre %> <br>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-9">
+    <h2><%= @game.title %></h2>
+    <div class="description row-space-3">
+      <%= @game.description %>
+    </div>
+  </div>
+</div>
