--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,2 +1,28 @@
-<h1>Game#show</h1>
-<p>Find me in app/views/game/show.html.erb</p>
+<div class="row">
+  <div class="col-md-3">
+    TTT
+  </div>
+  <div class="col-md-9">
+    <div class="panel panel-default">
+
+      <div class="panel-heading">
+        Location
+      </div>
+
+      <div class="panel-body">
+        <div class="container">
+
+            <div class="row">
+              <div class="form-group">
+                <label>Address</label>
+              </div>
+            </div>
+
+            <div class="text-center">
+            </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
