--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -19,10 +19,26 @@
       </div>
     </div>
   </div>
+
   <div class="col-md-9">
-    <h2><%= @game.title %></h2>
-    <div class="description row-space-3">
-      <%= @game.description %>
+    <div class ="panel panel-default">
+      <div class="panel-heading">
+        <h2><%= @game.title %></h2>
+      </div>
+      <div class="panel-body">
+        <div class="container">
+          <div class="description row-space-3">
+            <%= @game.description %>
+          </div>
+        </div>
+      </div>
     </div>
+
+
+
   </div>
+
+
+
+
 </div>
