--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -3,6 +3,7 @@
     <div class="center">
       <!-- game image -->
     </div>
+    <!-- side panel -->
     <div class="panel panel-default">
       <div class="panel-heading">
         Information
@@ -19,7 +20,7 @@
       </div>
     </div>
   </div>
-
+<!-- middle panel -->
   <div class="col-md-9">
     <div class ="panel panel-default">
       <div class="panel-heading">
