--- a/app/views/gamelists/show.html.erb
+++ b/app/views/gamelists/show.html.erb
@@ -1,2 +1,13 @@
-<h1>Gamelist#show</h1>
-<p>Find me in app/views/gamelist/show.html.erb</p>
+<div class="col-md-9">
+  <div class ="panel panel-default">
+    <div class="panel-heading">
+      <h2>Your Game List</h2>
+    </div>
+    <div class="panel-body">
+      <div class="container">
+        <div class="description row-space-3">
+          
+        </div>
+      </div>
+    </div>
+  </div>
