--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -2,6 +2,9 @@
   <div class="col-md-3">
     <div class="center">
       <!-- game image -->
+        <%= form_tag root_url do %>
+        <div><%=submit_tag "Add to Gamelist", class: "btn btn-primary btn-block" %></div>
+        <% end %>
     </div>
     <!-- side panel -->
     <div class="panel panel-default">
@@ -34,12 +37,5 @@
         </div>
       </div>
     </div>
-
-
-
   </div>
-
-
-
-
 </div>
