Adjusted routes, and indexing gamelists, and gamelists controller

--- a/app/views/gamelists/show.html.erb
+++ b/app/views/gamelists/show.html.erb
@@ -1,3 +1,4 @@
+<% binding.pry %>
 <div class="col-md-9">
   <div class ="panel panel-default">
     <div class="panel-heading">
@@ -6,7 +7,7 @@
     <div class="panel-body">
       <div class="container">
         <div class="description row-space-3">
-          
+
         </div>
       </div>
     </div>
