--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -2,7 +2,7 @@
   <div class="col-md-3">
     <div class="center">
       <!-- game image -->
-        <%= form_tag root_url do %>
+        <%= form_tag root_url + "gamelists/" +@game.id.to_s do %>
         <div><%=submit_tag "Add to Gamelist", class: "btn btn-primary btn-block" %></div>
         <% end %>
     </div>
