--- a/app/views/gamelists/index.html.erb
+++ b/app/views/gamelists/index.html.erb
@@ -9,6 +9,14 @@
         <div class="col-md-3">
           <%= game.game.title %>
         </div>
+        <div class="col-md-3">
+        </div>
+        <div class="col-md-3">
+        </div>
+        <div class="col-md-3">
+          <!-- button to remove in AJAX -->
+          <%= link_to "Remove", root_url + "gamelists/" + game.id.to_s, method: :delete, data: {confirm: "Are you sure?"} %>
+        </div>
       </div>
       <% end %>
     </div>
