Awesome looking trash button

--- a/app/views/gamelists/index.html.erb
+++ b/app/views/gamelists/index.html.erb
@@ -15,7 +15,9 @@
         </div>
         <div class="col-md-3">
           <!-- button to remove in AJAX -->
-          <%= link_to "Remove", root_url + "gamelists/" + game.id.to_s, method: :delete, data: {confirm: "Are you sure?"} %>
+          <%= link_to root_url + "gamelists/" + game.id.to_s, method: :delete, data: {confirm: "Are you sure?"} do%>
+            <i class="fa fa-trash-o" aria-hidden="true"></i>
+          <% end %>
         </div>
       </div>
       <% end %>
