Still trying to get delete working with ajax and jquery

--- a/app/views/gamelists/_games.html.erb
+++ b/app/views/gamelists/_games.html.erb
@@ -8,8 +8,16 @@
   </div>
   <div class="col-md-3">
     <!-- button to remove in AJAX -->
-    <%= link_to root_url + "gamelists/" + game.id.to_s, method: :delete, data: {confirm: "Are you sure?"} do%>
+    <%= link_to root_url + "gamelists/" + game.id.to_s, method: :delete, data: {confirm: "Are you sure?"}, id: "#{game.id}_select" do%>
       <i class="fa fa-trash-o" aria-hidden="true"></i>
     <% end %>
   </div>
 </div>
+
+<script type="text/javascript">
+  $(document).ready(function(){
+    $('#fa fa-trash-o').click(function(){
+      alert("Testing!");
+    });
+  })
+</script>
