Unable to get delete working without remote true. Going to just use the rails way and add ajax somehwere else

--- a/app/views/gamelists/index.html.erb
+++ b/app/views/gamelists/index.html.erb
@@ -4,9 +4,9 @@
       <h2>Your Game List</h2>
     </div>
     <div class="panel-body">
-      <% @list.each do |game| %>
-        <%= render partial: 'games', locals: {game: game} %>
-      <% end %>
+      <div id="games">
+            <%= render partial: 'gamelisting'%>
+      </div>
     </div>
   </div>
 </div>
