--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
   <a href ="#" class="js-next-games btn btn-secondary" style ="float: right; font-size: 3em; color: Black">
     <i class="fa fa-chevron-circle-right" aria-hidden="true"></i> </a>
   <% @games.each do |game| %>
-  <div class="col-md-3">
+  <div class="col-md-3 text-center">
     <%= game.title %>
   </div>
   <% end %>
