Moving javascript from index to show page

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -24,7 +24,12 @@
     </div>
   </div>
 <!-- middle panel -->
+
   <div class="col-md-9">
+    <a href ="#" class="js-prev-games btn btn-secondary" style ="float: left; font-size: 3em; color: Black">
+      <i class="fa fa-chevron-circle-left" aria-hidden="true"></i> </a>
+    <a href ="#" class="js-next-games btn btn-secondary" style ="float: right; font-size: 3em; color: Black">
+      <i class="fa fa-chevron-circle-right" aria-hidden="true"></i> </a>
     <div class ="panel panel-default">
       <div class="panel-heading">
         <h2><%= @game.title %></h2>
