--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,15 +1,3 @@
 <div class="row">
-  <a href ="#" class="js-prev-games btn btn-secondary" style ="float: left; font-size: 3em; color: Black">
-    <i class="fa fa-chevron-circle-left" aria-hidden="true"></i> </a>
-  <a href ="#" class="js-next-games btn btn-secondary" style ="float: right; font-size: 3em; color: Black">
-    <i class="fa fa-chevron-circle-right" aria-hidden="true"></i> </a>
-  <% @games.each do |game| %>
-  <div class="col-md-3 text-center">
-    <div class="panel panel-default">
-        <div class="panel-heading">
-          <%= game.title %>
-        </div>
-    </div>
-  </div>
-  <% end %>
+    <%= render partial: 'all_games' %>
 </div>
