Almost able to adjust things via ajax

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -13,13 +13,13 @@
       </div>
       <div class="panel-body">
         <strong> Title: </strong>
-          <%= @game.title %> <br>
+          <%= @game.title, id: "title" %> <br>
         <strong> Platforms: </strong>
-          <%= @game.platforms %> <br>
+          <%= @game.platforms, id: "platform" %> <br>
         <strong> Release Year: </strong>
-          <%= @game.release_year %> <br>
+          <%= @game.release_year, id: "release_year"%> <br>
         <strong> Genre: </strong>
-          <%= @game.genre %> <br>
+          <%= @game.genre, id: "genre" %> <br>
       </div>
     </div>
   </div>
