--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -13,13 +13,13 @@
       </div>
       <div class="panel-body">
         <strong> Title: </strong>
-          <%= @game.title, id: "title" %> <br>
+          <div class="title"><%= @game.title %><br></div>
         <strong> Platforms: </strong>
-          <%= @game.platforms, id: "platform" %> <br>
+        <div class="platform"><%= @game.platforms %><br></div>
         <strong> Release Year: </strong>
-          <%= @game.release_year, id: "release_year"%> <br>
+        <div class="release_year"><%= @game.release_year %><br></div>
         <strong> Genre: </strong>
-          <%= @game.genre, id: "genre" %> <br>
+        <div class="genre"><%= @game.genre %><br></div>
       </div>
     </div>
   </div>
