--- a/app/views/games/_game_panel.html.erb
+++ b/app/views/games/_game_panel.html.erb
@@ -1,6 +1,6 @@
 <div class ="panel panel-default">
   <div class="panel-heading">
-    <h2 class="game-title"><%= @game.title %></h2>
+    <h2 class="game-title text-center"><%= @game.title %></h2>
   </div>
   <div class="panel-body">
     <div class="container">
