Creating partial view for screenshots

--- a/app/views/games/screenshot_upload.html.erb
+++ b/app/views/games/screenshot_upload.html.erb
@@ -22,6 +22,8 @@
             <%= f.submit "Add screenshots", class: "btn btn-form" %>
           </div>
         <% end %>
+
+        <div id="screenshots"><%= render 'screenshot_list' %></div>
     </div>
   </div>
 </div>
