--- a/app/views/games/screenshot_upload.html.erb
+++ b/app/views/games/screenshot_upload.html.erb
@@ -8,22 +8,24 @@
         Screenshots
       </div>
       <div class="panel-body">
-        <%= form_for @game, url: game_screenshots_path(@game), method: 'post', html: {multipart: true} do |f| %>
-          <div class="row">
-            <div class="form-group">
-              <span class="btn btn-default btn-file text-babu">
-                Select Screenshots
-                <%= file_field_tag "images[]", type: :file, multiple: true %>
-              </span>
+        <div class="col-md-offset-3 col-md-6">
+          <%= form_for @game, url: game_screenshots_path(@game), method: 'post', html: {multipart: true} do |f| %>
+            <div class="row">
+              <div class="form-group">
+                <span class="btn btn-default btn-file text-babu">
+                  Select Screenshots
+                  <%= file_field_tag "images[]", type: :file, multiple: true %>
+                </span>
+              </div>
             </div>
-          </div>
-          <div class="text-center">
-            <br>
-            <%= f.submit "Add screenshots", class: "btn btn-form" %>
-          </div>
-        <% end %>
-
-        <div id="screenshots"><%= render 'screenshot_list' %></div>
+            <div class="text-center">
+              <br>
+              <%= f.submit "Add screenshots", class: "btn btn-form" %>
+            </div>
+          <% end %>
+        </div>
+        <br>
+      <div id="screenshots"><%=render 'screenshots/screenshot_list' %></div>
     </div>
   </div>
 </div>
