--- a/app/views/games/screenshot_upload.html.erb
+++ b/app/views/games/screenshot_upload.html.erb
@@ -1,5 +1,6 @@
 <div class="row">
-  <div class="col-md-12">
+  <%= render partial: "games_menu" %>
+  <div class="col-md-9">
     <div class="center">
       <!-- avatar -->
     </div>
