--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -22,9 +22,9 @@
             aria-haspopup="true" aria-expanded="false"><%= current_user.email %> <span class="caret"></span></a>
 
            <ul class="dropdown-menu">
-             <li><a href="#">Gameshelf</a></li>
-             <li><a href="#">Recommendations</a></li>
-             <li><a href="#">Blog Posts</a></li>
+             <li><%= link_to "Gameshelf", gamelists_path %></li>
+             <li><%= link_to "Reccomendations", gamelists_path %></li>
+             <li><a href="#">Comments</a></li>
              <li role="separator" class="divider"></li>
              <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
              <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
