--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -268,73 +268,6 @@ a {
   width: 100%;
 }
 
-// ROOM SHOW
-.amenities li {
-  margin-bottom: 10px;
-  font-size: 16px;
-  list-style-type: none;
-}
-
-.amenities .text-line-through {
-  text-decoration: line-through;
-  color: rgba(0,0,0,0.45);
-  font-size: 14px;
-}
-
-// RESERVATIONS
-.reservation-table td {
-  width: 100%;
-  border: none;
-  border-bottom: 1px solid #dce0e0;
-  padding: 10px;
-}
-
-.reservation-table .total td {
-  font-size: 16px;
-  font-weight: bold;
-  border: none;
-}
-
-.form-control.datepicker {
-  color: #00A699;
-  background-color: white;
-  border: 1px solid #00A699;
-  text-align: center;
-}
-
-.message-alert {
-  color: #d43242;
-  font-size: 14px;
-  padding-top: 10px;
-}
-
-// SEARCH
-#main {
-  height: 100%;
-  overflow: hidden;
-}
-
-#left {
-  padding: 10px 400px 10px 20px;
-  overflow: scroll;
-  height: 100%;
-}
-
-#right {
-  position: fixed;
-  top: 0;
-  right: 0;
-  width: 450px;
-  height: 100%;
-}
-
-.map_price {
-  text-align: center;
-  font-size: 16px;
-  font-weight: 600;
-  color: #00A699;
-}
-
 // HOME PAGE
 .discovery-card {
   background-size: cover;
@@ -345,4 +278,9 @@ a {
 .banner {
   margin-top: 50px;
   margin-bottom: 50px;
+}
+
+.home_page_text{
+  color: white;
+  font-weight: bold;
 }
