--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -14,11 +14,11 @@
 <h2>Comments Section:</h2>
 
 <% if user_signed_in? %>
-      <%= link_to 'New Comment', new_plan_comment_url(@plan), class: "btn btn-default btn-lg" %>
+      <%= link_to 'New Comment', new_game_comment_url(@game), class: "btn btn-default btn-lg" %>
 <% end %>
 <br>
 <% @comments.each do |comment| %>
-  <%= comment.text %>
+  <%= comment.content %>
   By: <%= comment.username %>
   <br>
 <% end %>
