--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -10,15 +10,4 @@
   </div>
 </div>
 
-<br>
-<h2>Comments Section:</h2>
-
-<% if user_signed_in? %>
-      <%= link_to 'New Comment', new_game_comment_url(@game), class: "btn btn-default btn-lg" %>
-<% end %>
-<br>
-<% @comments.each do |comment| %>
-  <%= comment.content %>
-  By: <%= comment.username %>
-  <br>
-<% end %>
+<%= render partial: "comments/comments_sec" %>
