--- a/app/views/comments/_comments_sec.html.erb
+++ b/app/views/comments/_comments_sec.html.erb
@@ -1,12 +1,23 @@
-<br>
-<h2>Comments Section:</h2>
-
-<% if user_signed_in? %>
-      <%= link_to 'New Comment', new_game_comment_url(@game), class: "btn btn-default btn-lg" %>
-<% end %>
-<br>
-<% @comments.each do |comment| %>
-  <%= comment.content %>
-  By: <%= comment.username %>
+<div class="col-md-12">
   <br>
-<% end %>
+  <div class="row">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h2>Comments Section:</h2>
+      </div>
+      <div class="panel-body">
+        <% if user_signed_in? %>
+              <%= link_to 'New Comment', new_game_comment_url(@game), class: "btn btn-default btn-lg" %>
+        <% end %>
+      </div>
+      <div class="panel-body">
+        <br>
+        <% @comments.each do |comment| %>
+          <%= comment.content %>
+          By: <%= comment.username %>
+          <br>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
