--- a/app/views/comments/_comments_sec.html.erb
+++ b/app/views/comments/_comments_sec.html.erb
@@ -7,7 +7,10 @@
       </div>
       <div class="panel-body">
         <% if user_signed_in? %>
-              <%= link_to 'New Comment', new_game_comment_url(@game), class: "btn btn-default btn-lg" %>
+            <%= form_for ([game, new_comment]) do |f|%>
+            <%= f.text_area :content, rows: 5, class: 'form-control' %>
+            <%= f.submit 'New Comment', class: "btn btn-default btn-lg" %>
+          <% end %>
         <% end %>
       </div>
       <div class="panel-body">
