--- a/app/views/pages/_all_games.html.erb
+++ b/app/views/pages/_all_games.html.erb
@@ -1,6 +1,7 @@
 <% @games.each do |game| %>
 <div class="col-md-3 text-center">
   <div class="panel panel-default">
+    < image_tag  game.screenshots %>
       <div class="panel-heading">
         <%= link_to game.title, game_path(game.id), class: "home_page_text"  %>
       </div>
